@@ -1,3 +1,8 @@
+2006-03-12  Callum McKenzie  <callum@spooky-possum.org>
+
+	* gnomine.xml: More doc updates. The words are almost there
+	now. Pictures still need work.
+
 2006-03-07  Callum McKenzie  <callum@spooky-possum.org>
 
 	* legal.xml: Dual license the docs under GPL/GFDL.
